--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
         </section>
 
         <section class="developer">
+                <h1>About the developer</h1>
                 <div class="developer">
+                        
                         <img src="assets/fabianteres.jpg" alt="Fabian Teres" style="
-                        border-radius: 50%; width: 350px; height: 450px; margin: 1 em 0;">
+                        border-radius: 50%; width: 350px; height: auto; margin: 1 em 0;">
                         <aside>
-                        <h2>About the developer</h2>
                         <br></br>
                         <br>As a dedicated and innovative software developer affiliated with ALX Africa, I, Fabian Teres, have a proven track record in designing, developing, and deploying robust applications. My expertise lies in crafting high-quality, scalable software solutions that meet diverse client needs.
 
